prohibit load by `autoload` on non-main Ractor

fix [Bug #18120]